--- a/old_template/index.html
+++ b/old_template/index.html
@@ -50,11 +50,6 @@
 		<p style="line-height: 150%" align="center">
 		<font face="Book Antiqua" size="4">Our research activities range from
 		galactic archaeology through gravitational lensing to cosmology...</font></p>
-<!--		<p style="line-height: 150%" align="center">
-		<font face="Book Antiqua" size="4">Many members of our group are
-		prominent players in the Survey Simulation PipeLine (<b><a href="http://www.astronomy.swin.edu.au/SSimPL/"><span style="text-decoration: none">SSimPL</span></a></b>)
-		Collaboration</font></p>
--->
 		<p>&nbsp;</td>
 		<td width="62" bordercolor="#FFFFFF">&nbsp;</td>
 	</tr>
@@ -106,14 +101,6 @@
 		<td width="51" align="center">&nbsp;</td>
 	</tr>
 	<tr>
-		<!-- <td width="48" align="center">&nbsp;</td>
-		<td width="117" align="center">
-		<p align="center">
-		<a href="OZlens.htm">
-		<img border="0" src="images/side_caustic.jpg" width="125" height="121"></a></td>
-		<td width="160" align="center">
-		<font size="5" face="Book Antiqua"><a href="OZlens.htm">
-		<span style="text-decoration: none; font-weight: 700">Oz Lens 2008</span></a></a></font></td> -->
 		<td width="117" align="center">
 		<p align="center">
 		<a href="join_us.htm">
@@ -124,12 +111,13 @@
 		<span style="text-decoration: none; font-weight: 700">Join Us</span></a></font></td>
 		<td width="117" align="center">
 		<p align="center">
-		<img border="0" src="images/Imagemin.jpg" width="125" height="125"></td>
+<!--		<img border="0" src="images/Imagemin.jpg" width="125" height="125"></td>
 		<td width="159" align="center">
 		<b>
 		<font face="Book Antiqua">&nbsp;<font size="5"> <a href="Image.htm">
 		<span style="text-decoration: none">Images</span></a></font></font></b></td>
 		<td width="51" align="center">&nbsp;</td>
+-->
 	</tr>
 </table>
 <p>&nbsp;</p>
