--- a/old_template/research_activity.htm
+++ b/old_template/research_activity.htm
@@ -17,17 +17,11 @@
 		<p align="center"><a href="MeetTheTeam.htm">
 		<img border="0" src="images/MeettheTeam2.jpg" width="102" height="101"></a></td>
 		<td align="center" width="106">
-		<a href="Image.htm">
-		<img border="0" src="images/Impus.jpg" width="102" height="102"></a></td>
 		<td align="center">
 		&nbsp;</td>
 		<td align="center" width="106">
 		<p align="center"><a href="join_us.htm">
 		<img border="0" src="images/JoinUsbo2.jpg" width="102" height="101"></a></td>
-		<td width="106" align="center">
-		<p align="center">
-		<a href="OZlens.htm">
-		<img border="0" src="images/side_caustic_link.jpg" width="102" height="101"></a></td>
 		<td width="106" align="center">
 		<p align="center">
 		<a href="http://adsabs.harvard.edu/cgi-bin/nph-abs_connect?db_key=AST&amp;db_key=PRE&amp;qform=AST&amp;arxiv_sel=astro-ph&amp;arxiv_sel=cond-mat&amp;arxiv_sel=cs&amp;arxiv_sel=gr-qc&amp;arxiv_sel=hep-ex&amp;arxiv_sel=hep-lat&amp;arxiv_sel=hep-ph&amp;arxiv_sel=hep-th&amp;arxiv_sel=math&amp;arxiv_sel=math-ph&amp;arxiv_sel=nlin&amp;arxiv_sel=nucl-ex&amp;arxiv_sel=nucl-th&amp;arxiv_sel=physics&amp;arxiv_sel=quant-ph&amp;arxiv_sel=q-bio&amp;sim_query=YES&amp;ned_query=YES&amp;aut_logic=OR&amp;obj_logic=OR&amp;author=lewis%2C+g.%0D%0Abrewer%2C+b.&amp;object=&amp;start_mon=&amp;start_year=&amp;end_mon=&amp;end_year=&amp;ttl_logic=OR&amp;title=&amp;txt_logic=OR&amp;text=&amp;nr_to_return=100&amp;start_nr=1&amp;jou_pick=NO&amp;ref_stems=&amp;data_and=ALL&amp;group_and=ALL&amp;start_entry_day=&amp;start_entry_mon=&amp;start_entry_year=&amp;end_entry_day=&amp;end_entry_mon=&amp;end_entry_year=&amp;min_score=&amp;sort=NDATE&amp;data_type=SHORT&amp;aut_syn=YES&amp;ttl_syn=YES&amp;txt_syn=YES&amp;aut_wt=1.0&amp;obj_wt=1.0&amp;ttl_wt=0.3&amp;txt_wt=3.0&amp;aut_wgt=YES&amp;obj_wgt=YES&amp;ttl_wgt=YES&amp;txt_wgt=YES&amp;ttl_sco=YES&amp;txt_sco=YES&amp;version=1">
@@ -76,7 +70,7 @@
 		<span style="line-height: 115%; font-family: Book Antiqua; font-weight: 700">
 		<font size="4">Fundamental General Relativity and Cosmology:</font></span><p class="MsoNormal">
 		<font face="Book Antiqua" size="4">The theory of General Relativity is 
-		close to 100 years old and has been the preferred theory of gravity 
+		more than 100 years old and has been the preferred theory of gravity 
 		since its formulation by Einstein. Despite this, the understanding of 
 		General Relativity is not as advanced as might be expected, with few 
 		formal solutions existing and the physical interpretation of some of the 
@@ -121,7 +115,7 @@
 		uncover astrophysical secrets. This includes employing Bayesian 
 		techniques to reveal the dark matter distribution of distant galaxies, 
 		and employing lenses as a natural microscope to see structure in young 
-		star formaing galaxies.Also, the group studies the action of individual 
+		star forming galaxies. Also, the group studies the action of individual 
 		stars in the phenomenon of gravitational microlensing to see the heart 
 		of quasars, the most powerful galaxies in the universe. A new program 
 		underway will trace the weak gravitational lensing of light rays as they 
@@ -150,6 +144,147 @@
 		which will provide an unprecedented map of the structure in the halo of 
 		our nearest companion, the Andromeda Galaxy.</font></p>
 		<p>&nbsp;</td>
+	</tr>
+	<tr>
+		<td align="center">
+		<p class="MsoNormal"><font face="Book Antiqua" size="4">Are you 
+		interested in dark energy, lensing, the Milky Way galaxy, Bayesian 
+		statistics, think we're a good looking bunch, want an excuse to work 
+		within walking distance of $6.5 Thai? Look no further ...</font></td>
+	</tr>
+</table>
+<table border="0" width="99%" bordercolor="#FFFFFF" bordercolorlight="#FFFFFF" bordercolordark="#FFFFFF">
+	<tr>
+		<td width="62" rowspan="13">&nbsp;</td>
+		<td colspan="2">&nbsp;</td>
+		<td width="62" rowspan="13">&nbsp;</td>
+	</tr>
+	<tr>
+		<td colspan="2" height="84">
+		<p align="justify">
+		<span style="line-height: 115%; font-family: Book Antiqua">
+		<font size="4">As you can see, the Gravitational Astrophysics group 
+		undertakes a diverse range of research projects. Below we list some of 
+		the projects currently on offer. If you are interested in joining the 
+		group, please contact us for further information:</font></span></td>
+	</tr>
+	<tr>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<ul type="circle">
+			<li>
+			<span style="line-height: 115%; font-family: Book Antiqua; font-weight: 700">
+			<font size="4">Simulating the Cosmos</font></span></li>
+		</ul>
+		<blockquote>
+			<p><span style="line-height: 115%; font-family: Book Antiqua">
+			<font size="4">Cosmologists regularly simulate large chunks of the 
+			universe within a computer, watching how the forces of gravity build 
+			up the galaxies we see around us today. There are several projects 
+			available in this area, including the development of techniques to 
+			compare&nbsp; the structure in synthetic universes to the observed 
+			cosmos, and the development of new approaches to the inclusion of 
+			the complex physics that governs the formation of the first stars. 
+			The projects would utilise supercomputer environments to provide 
+			extremely detailed cosmological models.</font></span></p>
+		</blockquote>
+		</td>
+	</tr>
+	<tr>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+	</tr>
+	<tr>
+		<td>
+		<ul type="circle">
+			<li><b><font face="Book Antiqua" size="4">Fundamental Cosmology</font></b></li>
+		</ul>
+		<blockquote>
+			<p><span style="line-height: 115%; font-family: Book Antiqua">
+			<font size="4">&nbsp;This project involves looking at the meaning 
+			and the nature of expanding space. Couched in the language of 
+			Einstein's general relativity, you will examine the various forms of 
+			the cosmological model, and what these imply for the motions of 
+			light rays and observers. The group is beginning a new look at 
+			inhomogeneous cosmologies and whether the dominant &quot;dark energy&quot; 
+			component is little more than a mirage</font></span></p>
+		</blockquote>
+		</td>
+		<td>&nbsp;</td>
+	</tr>
+	<tr>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+	</tr>
+	<tr>
+		<td>
+		<ul type="circle">
+			<li><b><font face="Book Antiqua" size="4">Gravitational Lensing</font></b></li>
+		</ul>
+		<blockquote>
+			<p><span style="line-height: 115%; font-family: Book Antiqua">
+			<font size="4">The deflection of light by massive bodies is a key 
+			prediction of Einstein's theory of relativity, and gravitational 
+			lensing has become a very important probe on the distribution of 
+			matter. Several projects are available in this area, including the 
+			development of new and novel techniques to reconstruct the true form 
+			of a gravitationally lensed source (and ultimately to reveal the 
+			distribution of dark matter), as well as simulating the 
+			gravitational lensing effect of clusters and superclusters of 
+			galaxies</font></span></p>
+		</blockquote>
+		</td>
+		<td>&nbsp;</td>
+	</tr>
+	<tr>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+	</tr>
+	<tr>
+		<td>
+		<ul type="circle">
+			<li><b><font face="Book Antiqua" size="4">Gravitational Microlensing</font></b></li>
+		</ul>
+		<blockquote>
+			<p><span style="line-height: 115%; font-family: Book Antiqua">
+			<font size="4">&nbsp;On the smallest scales, galaxies are made up of 
+			compact objects, such as stars, planets and black holes. These can 
+			induce their own complex gravitational lensing signature which can 
+			be used to probe the extreme environments of distant quasars. In 
+			this project, you will use &quot;ray tracing&quot; to recreate the effects of 
+			gravitational microlensing, and consider its influence on the light 
+			we receive from the distant universe.</font></span></p>
+		</blockquote>
+		</td>
+		<td>&nbsp;</td>
+	</tr>
+	<tr>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+	</tr>
+	<tr>
+		<td>
+		<ul type="circle">
+			<li><b><font face="Book Antiqua" size="4">Galactic Cannibalism</font></b></li>
+		</ul>
+		<blockquote>
+			<p><font face="Book Antiqua" size="4">It is unfortunate fact of the 
+			Universe, but big galaxies got big through the accretion of smaller 
+			systems. This &quot;galaxies cannibalism&quot; is still ongoing and is very 
+			apparent within our own Milky Way and the Andromeda Galaxy. In this 
+			project, you will use state of the art of numerical simulators to 
+			recreate the ongoing collisions and understand just how they are 
+			contributing to the build-up of galaxies. </font></p>
+		</blockquote>
+		</td>
+		<td>&nbsp;</td>
+	</tr>
+	<tr>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
 	</tr>
 </table>
 <p>&nbsp;</p>
